--- a/pflanzenbewaesserung/static/css/details.css
+++ b/pflanzenbewaesserung/static/css/details.css
@@ -21,13 +21,13 @@ canvas {
 /* Measurements */
 .card-header {
     font-weight: bold;
-    background-color: #4CAF50;
-    color: white;
+    background-color: rgb(237, 235, 235);
+    color: #4CAF50;
 }
 
 .card-body h5 {
     font-size: 1.8em;
-    color: #555;
+    color: white;
 }
 
 /* Make the card and image responsive to the list's height */
@@ -45,5 +45,21 @@ canvas {
     height: 100%;
     width: 100%;
     border-radius: 10px;
+}
+
+.custom-card {
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border: none;
+}
+
+.custom-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.text-white {
+    color: white;
 }
 
