--- a/pflanzenbewaesserung/static/css/details.css
+++ b/pflanzenbewaesserung/static/css/details.css
@@ -63,3 +63,36 @@ canvas {
     color: white;
 }
 
+.water-level-text {
+    margin: 0;
+    font-weight: bold;
+    color: #333;
+}
+
+.water-tank-bar {
+    flex-grow: 1;
+    height: 20px;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    background-color: #2c2c2c;
+    position: relative;
+    padding: 1px;
+    min-width: 150px;
+}
+
+.water-fill {
+    height: 100%;
+    background-color: #007bff;
+    width: {{ measurementDataNow['waterlevel'] }}%;
+    transition: width 0.5s ease;
+    border-radius: 3px;
+}
+
+.row.my-5 {
+    width: 30%;
+}
+
+.water-percentage {
+    font-weight: bold;
+    color: #333;
+}
