--- a/pflanzenbewaesserung/static/css/overview.css
+++ b/pflanzenbewaesserung/static/css/overview.css
@@ -37,3 +37,13 @@ h1 {
     display: block;
     margin: 0 auto;
 }
+
+.alert ul {
+    margin: 0;
+    padding-left: 20px; /* Verkleinern Sie den linken Einzug */
+}
+
+.alert ul li {
+    margin-bottom: 0; /* Entfernt zusätzlichen Abstand unter dem Namen */
+    padding: 0; /* Entfernt zusätzliche Auffüllung */
+}
