--- a/pflanzenbewaesserung/templates/overview.html
+++ b/pflanzenbewaesserung/templates/overview.html
@@ -10,6 +10,17 @@
 <div class="container">
     <h1 class="my-4">Pflanzenübersicht</h1>
 
+    {% if low_water_warning %}
+        <div class="alert alert-danger" role="alert">
+            Achtung: Der Wasserstand der folgenden Pflanzen ist unter 10%:
+            <ul>
+                {% for plant_name in low_water_plants %}
+                    <li>{{ plant_name }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+
     <div class="row">
         {% for i in plants %}
             <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
