--- a/pflanzenbewaesserung/static/css/details.css
+++ b/pflanzenbewaesserung/static/css/details.css
@@ -114,3 +114,8 @@ canvas {
     background-color: #5a6268;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
+
+.qrCodeContainer{
+    height: 100;
+    width: 100;
+}
