fix unit in graph (lx -> %)

--- a/pflanzenbewaesserung/templates/details.html
+++ b/pflanzenbewaesserung/templates/details.html
@@ -213,7 +213,7 @@
             labels: filteredLabels,
             datasets: [
                 {
-                    label: 'Sonnenintensität (lx)',
+                    label: 'Sonnenintensität (%)',
                     data: filteredSunData,
                     fill: false,
                     borderColor: 'rgb(255,255,0)',
